Spring 2026 Wrap-Up and Bug Fixes
Moved all old news into the archive and added a news block for Gradwrite Spring 2026 Wrap-Up. Fixed a broken link on the drop-down menu from the Resources page to the News page. Increased the z-index on the navigation bar to fix an issue where the FAQ boxes could overlap the navigation bar. Removed access to the registration forms for the Gradwrite Spring 2026 tournaments. Adjusted the size and padding of text in the news section to make sure long text remains in the boxes on mobile. Fixed the link color style on the archived news to actually use the variable. Modified the instructions for a new news block to refer to the news instead of the archived news, and changed the sample from "News" to the proper link, "/".

--- a/Navigation.css
+++ b/Navigation.css
@@ -15,6 +15,7 @@
   background-color: white;
   min-width: 100vw;
   border-bottom: 1px solid black;
+  z-index: 3;
 }
 
 #left-bar {
